# eva-llvm-walkthrough

./: .clang-format  .gitignore  CMakeLists.txt  EnvironmentSetup.md  README.md
.github/workflows/: build.yml
cmake/: add_test_executable.cmake  assertions.cmake  setup_llvm_package.cmake
src/: Environment.h  EvaLLVM.cpp  EvaLLVM.h  EvaParser.h  TypesMisc.h  main.cpp
src/test/: test1.eva  test1_blocks.cpp  test2_arith.cpp  test2_arith.eva  test3_if.cpp  test3_if.eva  test4_while.cpp  test4_while.eva  test5_func.cpp  test5_func.eva  test6_class.cpp  test6_class.eva  test7_class.cpp  test7_class_inheritance.eva  test8_callable.cpp  test8_callable.eva
src/test/expected/: test1_blocks.txt  test2_arith.txt  test3_if.txt  test4_while.txt  test5_func.txt  test6_class.txt  test7_class.txt  test8_callable.txt
